add Sign Out button to home screen and overide onBackPressed(); add return to home button to select category page and overide onBackPressed(); add clearAuthentication() functionality on sign out

--- a/res/layout/select_category_page.xml
+++ b/res/layout/select_category_page.xml
@@ -27,4 +27,12 @@
 		android:id="@+id/btnQuickSync"
 		android:layout_margin="5dp"
 		android:textSize="25dp"/>
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Return To Home"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/btnReturnToHome"
+            android:layout_margin="5dp"
+            android:textSize="25dp"/>
 </LinearLayout>
