--- a/res/layout/view_consignment_order_page.xml
+++ b/res/layout/view_consignment_order_page.xml
@@ -29,7 +29,7 @@
 				android:layout_height="wrap_content"
 				android:textAppearance="?android:attr/textAppearanceLarge"
 				android:layout_weight="70"
-				android:text="Outlet Name"
+				android:text="Outlet"
 				android:layout_margin="5dp"
 				android:textSize="25dp"/>
 			<TextView
@@ -149,6 +149,19 @@
 				android:id="@+id/txtViewConsignmentRemarks" android:layout_margin="5dp" android:textSize="25dp"
                 android:layout_weight="30"/>
 		</LinearLayout>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ordered Items"
+                android:layout_margin="5dp"
+                android:textSize="25dp" android:layout_weight="30"
+                android:gravity="center"/>
+            </LinearLayout>
 		<ListView
 			android:layout_width="match_parent"
 			android:id="@+id/consignmentOrderDetailListView"
