--- a/res/layout/view_direct_order_page.xml
+++ b/res/layout/view_direct_order_page.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Outlet Name"
+                android:text="Outlet"
                 android:layout_margin="5dp"
                 android:textSize="25dp" android:layout_weight="70"/>
         <TextView
@@ -126,6 +126,20 @@
                 android:id="@+id/txtViewDirectRemarks" android:layout_margin="5dp" android:textSize="25dp"
                 android:layout_weight="30"/>
             </LinearLayout>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Ordered Items"
+                    android:gravity="center"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"
+                    android:layout_weight="30"/>
+        </LinearLayout>
         <ListView
                 android:layout_width="match_parent"
                 android:layout_weight="1"
