--- a/res/layout/view_item_detail_page.xml
+++ b/res/layout/view_item_detail_page.xml
@@ -51,7 +51,7 @@
         <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:textAppearance="?android:attr/textAppearanceLarge" android:text="Quantity"
                   android:textSize="25dp" android:layout_margin="5dp" android:layout_weight="50"/>
-        <TextView
+        <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/viewTxtQuantity" android:textSize="25dp" android:layout_margin="5dp"
@@ -66,7 +66,7 @@
         <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:textAppearance="?android:attr/textAppearanceLarge" android:text="Each Discount"
                   android:textSize="25dp" android:layout_margin="5dp" android:layout_weight="50"/>
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/viewTxtEachDiscount"
+        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/viewTxtEachDiscount"
                   android:textSize="25dp" android:layout_margin="5dp"
                   android:layout_weight="50"/>
             </LinearLayout>
@@ -93,6 +93,11 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:id="@+id/viewItemAmount"/>
         </LinearLayout>
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Update"
+                android:id="@+id/btnViewItemUpdate" android:layout_margin="5dp" android:textSize="25dp"/>
         <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
