--- a/res/layout/view_project_order_page.xml
+++ b/res/layout/view_project_order_page.xml
@@ -1,167 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="vertical"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
-	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_margin="5dp">
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="Project Sales Order"
-			android:layout_margin="5dp"
-			android:textSize="30dp"
-			android:focusableInTouchMode="true"
-			android:gravity="center_horizontal"/>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:weightSum="100"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_weight="70"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Customer"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_weight="30"
-				android:id="@+id/txtViewProjectCustomerName"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:weightSum="100"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="70"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Distributor"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="30"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewProjectDistributorName"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:weightSum="100"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="70"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Vehicle"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="30"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewProjectVehicleNo"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:weightSum="100"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Driver"
-				android:layout_weight="70"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewProjectDriverName"
-				android:layout_margin="5dp"
-				android:layout_weight="30"
-				android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:weightSum="100"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="70"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Driver NIC"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="30"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewProjectDriverNIC" android:layout_margin="5dp" android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:weightSum="100"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_weight="70"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Delivery Date" android:layout_margin="5dp" android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="30"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewProjectDeliveryDate" android:layout_margin="5dp" android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:weightSum="100"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="70"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Remarks" android:layout_margin="5dp" android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_weight="30"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewProjectRemarks" android:layout_margin="5dp" android:textSize="25dp"/>
-		</LinearLayout>
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Project Sales Order"
+                android:layout_margin="5dp"
+                android:textSize="30dp"
+                android:focusableInTouchMode="true"
+                android:gravity="center_horizontal"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:weightSum="100"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Customer"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="30"
+                    android:id="@+id/txtViewProjectCustomerName"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:weightSum="100"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="70"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Distributor"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="30"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewProjectDistributorName"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:weightSum="100"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="70"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Vehicle"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="30"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewProjectVehicleNo"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:weightSum="100"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Driver"
+                    android:layout_weight="70"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewProjectDriverName"
+                    android:layout_margin="5dp"
+                    android:layout_weight="30"
+                    android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:weightSum="100"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="70"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Driver NIC"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="30"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewProjectDriverNIC" android:layout_margin="5dp" android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:weightSum="100"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Delivery Date" android:layout_margin="5dp" android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="30"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewProjectDeliveryDate" android:layout_margin="5dp" android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:weightSum="100"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="70"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Remarks" android:layout_margin="5dp" android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_weight="30"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewProjectRemarks" android:layout_margin="5dp" android:textSize="25dp"/>
+        </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -170,24 +170,29 @@
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:background="#4F82B4"
                     android:text="Ordered Items"
                     android:gravity="center"
                     android:layout_margin="5dp"
                     android:textSize="25dp" android:layout_weight="30"/>
         </LinearLayout>
-		<ListView
-			android:layout_width="match_parent"
-			android:layout_weight="1"
-			android:id="@+id/projectOrderDetailListView"
-			android:layout_height="match_parent" android:layout_margin="5dp">
-		</ListView>
-		<Button
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:text="Sync"
-			android:layout_margin="5dp"
-			android:textSize="25dp"
-			android:id="@+id/btnProjectSync"
-			android:layout_gravity="center_horizontal"/>
-	</LinearLayout>
+        <ListView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/projectOrderDetailListView"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_margin="5dp">
+        </ListView>
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Sync"
+                android:layout_margin="5dp"
+                android:textSize="25dp"
+                android:id="@+id/btnProjectSync"
+                android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
 </LinearLayout>
