--- a/res/layout/view_consignment_order_page.xml
+++ b/res/layout/view_consignment_order_page.xml
@@ -1,183 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="vertical"
-			  android:layout_width="match_parent"
-			  android:layout_height="fill_parent">
-	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="match_parent"
-		android:layout_height="fill_parent"
-		android:layout_margin="5dp" android:weightSum="1">
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="Consignment Sales Order"
-			android:layout_margin="5dp"
-			android:textSize="30dp"
-			android:focusableInTouchMode="true"
-			android:gravity="center_horizontal"/>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:weightSum="100"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:layout_weight="70"
-				android:text="Outlet"
-				android:layout_margin="5dp"
-				android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewConsignmentOutletName"
-				android:layout_margin="5dp"
-				android:layout_weight="30"
-				android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp" android:weightSum="100">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Distributor"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="70"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewConsignmentDistributorName"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="30"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp" android:weightSum="100">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Vehicle"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="70"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewConsignmentVehicleNo"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="30"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp" android:weightSum="100">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Driver"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="70"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewConsignmentDriverName"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="30"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp" android:weightSum="100">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Driver NIC"
-				android:layout_margin="5dp"
-				android:textSize="25dp" android:layout_weight="70"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewConsignmentDriverNIC" android:layout_margin="5dp" android:textSize="25dp"
-                android:layout_weight="30"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-            android:weightSum="100"
-			android:layout_margin="5dp">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-                android:layout_weight="70"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Delivery Date" android:layout_margin="5dp" android:textSize="25dp"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-                android:layout_weight="30"
-				android:id="@+id/txtViewConsignmentDeliveryDate" android:layout_margin="5dp" android:textSize="25dp"/>
-		</LinearLayout>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="5dp" android:weightSum="100">
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:text="Remarks" android:layout_margin="5dp" android:textSize="25dp" android:layout_weight="70"/>
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/txtViewConsignmentRemarks" android:layout_margin="5dp" android:textSize="25dp"
-                android:layout_weight="30"/>
-		</LinearLayout>
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="fill_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_margin="5dp" android:weightSum="1">
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Consignment Sales Order"
+                android:layout_margin="5dp"
+                android:textSize="30dp"
+                android:focusableInTouchMode="true"
+                android:gravity="center_horizontal"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:weightSum="100"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_weight="70"
+                    android:text="Outlet"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewConsignmentOutletName"
+                    android:layout_margin="5dp"
+                    android:layout_weight="30"
+                    android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" android:weightSum="100">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Distributor"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="70"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewConsignmentDistributorName"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="30"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" android:weightSum="100">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Vehicle"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="70"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewConsignmentVehicleNo"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="30"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" android:weightSum="100">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Driver"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="70"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewConsignmentDriverName"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="30"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" android:weightSum="100">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Driver NIC"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="70"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewConsignmentDriverNIC" android:layout_margin="5dp" android:textSize="25dp"
+                    android:layout_weight="30"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="100"
+                android:layout_margin="5dp">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="70"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Delivery Date" android:layout_margin="5dp" android:textSize="25dp"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="30"
+                    android:id="@+id/txtViewConsignmentDeliveryDate" android:layout_margin="5dp"
+                    android:textSize="25dp"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp" android:weightSum="100">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Remarks" android:layout_margin="5dp" android:textSize="25dp"
+                    android:layout_weight="70"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtViewConsignmentRemarks" android:layout_margin="5dp" android:textSize="25dp"
+                    android:layout_weight="30"/>
+        </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp">
-        <TextView
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Ordered Items"
+                    android:textColor="@android:color/white"
+                    android:background="#4F82B4"
+                    android:layout_margin="5dp"
+                    android:textSize="25dp" android:layout_weight="30"
+                    android:gravity="center"/>
+        </LinearLayout>
+        <ListView
                 android:layout_width="match_parent"
+                android:id="@+id/consignmentOrderDetailListView"
                 android:layout_height="wrap_content"
-                android:text="Ordered Items"
+                android:layout_weight="1"
+                android:clickable="false"
                 android:layout_margin="5dp"
-                android:textSize="25dp" android:layout_weight="30"
-                android:gravity="center"/>
-            </LinearLayout>
-		<ListView
-			android:layout_width="match_parent"
-			android:id="@+id/consignmentOrderDetailListView"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:clickable="false"
-			android:layout_margin="5dp">
-		</ListView>
-		<Button
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:text="Sync"
-			android:layout_margin="5dp"
-			android:layout_alignParentBottom="true"
-			android:textSize="25dp"
-			android:id="@+id/btnConsignmentSync"
-			android:layout_gravity="center_horizontal"/>
-	</LinearLayout>
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp">
+        </ListView>
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Sync"
+                android:layout_margin="5dp"
+                android:layout_alignParentBottom="true"
+                android:textSize="25dp"
+                android:id="@+id/btnConsignmentSync"
+                android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
 </LinearLayout>
