--- a/res/layout/enter_item_detail_page.xml
+++ b/res/layout/enter_item_detail_page.xml
@@ -1,93 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:orientation="vertical"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
-	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_margin="5dp"
-	>
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="Item"
-			android:textSize="25dp" android:layout_margin="5dp"/>
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:id="@+id/enterItem" android:textSize="25dp" android:layout_margin="5dp"/>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"
-			android:layout_margin="5dp"
-			android:weightSum="100">
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:layout_weight="50"
-				android:textSize="25dp"
-				android:layout_margin="5dp"
-				android:text="Unit Price"/>
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_weight="50"
-				android:textSize="25dp"
-				android:layout_margin="5dp"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:id="@+id/enterItemUnitPrice"/>
-		</LinearLayout>
-		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
-				  android:textAppearance="?android:attr/textAppearanceLarge" android:text="Quantity"
-				  android:textSize="25dp" android:layout_margin="5dp"/>
-		<EditText
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:id="@+id/enterTxtQuantity" android:textSize="25dp" android:layout_margin="5dp"
-			android:hint="Quantity" android:inputType="numberDecimal"/>
-		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
-				  android:textAppearance="?android:attr/textAppearanceLarge" android:text="Each Discount"
-				  android:textSize="25dp" android:layout_margin="5dp"/>
-		<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/enterTxtEachDiscount"
-				  android:textSize="25dp" android:layout_margin="5dp" android:hint="Discount"
-				  android:inputType="numberDecimal"/>
-		<LinearLayout
-			android:orientation="horizontal"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"
-			android:layout_margin="5dp"
-			android:weightSum="100">
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:layout_weight="50"
-				android:textSize="25dp"
-				android:layout_margin="5dp"
-				android:text="Amount"/>
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_weight="50"
-				android:textSize="25dp"
-				android:layout_margin="5dp"
-				android:textAppearance="?android:attr/textAppearanceLarge"
-				android:id="@+id/enterItemAmount"/>
-		</LinearLayout>
-		<Button
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:text="Add Item"
-			android:id="@+id/btnEnterItem" android:layout_margin="5dp" android:textSize="25dp"/>
-		<Button
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:text="Cancel Item"
-			android:id="@+id/btnCancelItem" android:layout_margin="5dp" android:textSize="25dp"/>
-	</LinearLayout>
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            >
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Item"
+                android:textSize="25dp" android:layout_margin="5dp"/>
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/enterItem" android:textSize="25dp" android:layout_margin="5dp"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_margin="5dp"
+                android:weightSum="100">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_weight="50"
+                    android:textSize="25dp"
+                    android:layout_margin="5dp"
+                    android:text="Unit Price"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textSize="25dp"
+                    android:layout_margin="5dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/enterItemUnitPrice"/>
+        </LinearLayout>
+        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
+                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="Quantity"
+                  android:textSize="25dp" android:layout_margin="5dp"/>
+        <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/enterTxtQuantity" android:textSize="25dp" android:layout_margin="5dp"
+                android:hint="Quantity" android:inputType="numberDecimal"/>
+        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
+                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="Each Discount"
+                  android:textSize="25dp" android:layout_margin="5dp"/>
+        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
+                  android:id="@+id/enterTxtEachDiscount"
+                  android:textSize="25dp" android:layout_margin="5dp" android:hint="Discount"
+                  android:inputType="numberDecimal"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_margin="5dp"
+                android:weightSum="100">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_weight="50"
+                    android:textSize="25dp"
+                    android:layout_margin="5dp"
+                    android:text="Amount"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:textSize="25dp"
+                    android:layout_margin="5dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/enterItemAmount"/>
+        </LinearLayout>
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Item"
+                android:id="@+id/btnEnterItem" android:layout_margin="5dp" android:textSize="25dp"/>
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Cancel Item"
+                android:id="@+id/btnCancelItem" android:layout_margin="5dp" android:textSize="25dp"/>
+    </LinearLayout>
 </LinearLayout>
