--- a/res/layout/cheque_data_input_dialog_page.xml
+++ b/res/layout/cheque_data_input_dialog_page.xml
@@ -2,63 +2,63 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_width="400dp"
+              android:layout_height="wrap_content" android:weightSum="4" android:padding="3dp" android:paddingRight="5dp" android:paddingLeft="5dp">
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="1" android:weightSum="3">
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Bank"
-                android:gravity="center_vertical"/>
+                android:gravity="center_vertical" android:layout_weight="1"/>
         <Spinner
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:id="@+id/spinner"/>
+                android:id="@+id/bankCombo" android:layout_weight="2"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="1" android:weightSum="3">
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Check No"
-                android:gravity="center_vertical"/>
+                android:gravity="center_vertical" android:layout_weight="1"/>
         <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:id="@+id/inputChequeNo"/>
+                android:id="@+id/inputChequeNo" android:layout_weight="2"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_height="wrap_content" android:layout_weight="1" android:weightSum="3">
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Amount"
-                android:gravity="center_vertical"/>
+                android:gravity="center_vertical" android:layout_weight="1"/>
         <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:id="@+id/inputAmount"/>
+                android:id="@+id/inputAmount" android:layout_weight="2" android:inputType="numberDecimal"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1">
+            android:layout_width="196dp" android:layout_gravity="right"
+            android:layout_height="wrap_content" android:weightSum="2">
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Ok"
-                android:id="@+id/btnOk"/>
+                android:id="@+id/btnOk" android:layout_weight="1"/>
         <Button
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Cancel"
-                android:id="@+id/btnCancel"/>
+                android:id="@+id/btnCancel" android:layout_weight="1"/>
     </LinearLayout>
 </LinearLayout>
