--- a/res/layout/invoice_payment_details_page.xml
+++ b/res/layout/invoice_payment_details_page.xml
@@ -27,19 +27,12 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Rs 1000"
                 android:id="@+id/txtPendingAmount" android:gravity="center_vertical" android:layout_weight="1" android:textSize="25dp"/>
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/inputNowPaying" android:gravity="center_vertical|right" android:layout_weight="1" android:text="0" android:hint="Now Paying"
-                android:textSize="25dp"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:weightSum="100" android:background="#E6E6E6" android:padding="1dp">
-        <TextView
+            android:layout_height="wrap_content" android:weightSum="100" android:background="#ff4f82b4" android:padding="1dp">
+    <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Make Payment"
